tests/lime/fail/tokens/macro_first/byte_54.wsa
macro 6 [push 54] 6
